<?xml version="1.0"?>
<package>
  <name>zeabus_serial</name>
  <version>0.0.0</version>
  <description>The zeabus_serial package</description>

  <maintainer email="mahisorn.w@hiveground.com">mahisorn</maintainer>
  <author>Mahisorn Wongphati</author>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	<cpp cflags="-I${prefix}/include"/>
  </export>
</package>
