<package>
	<name>zeabus_teleop</name>
	<version>0.0.1</version>
	<description>Provides teleoperation using joysticks or keyboard.</description>
	<maintainer email="mahisorn.w@hiveground.com">Mahisorn Wongphati</maintainer>
	<license>BSD</license>
	<url type="website">http://www.hiveground.com/zeabus</url>
	<url type="repository">https://bitbucket.org/hiveground/zeabus</url>
	<url type="bugtracker">https://bitbucket.org/hiveground/zeabus/issues</url>
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>joy</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>joy</run_depend>	
	<run_depend>yocs_velocity_smoother</run_depend>
	<run_depend>zeabus_bringup</run_depend>
</package>